# multiphysique

./: README.md  installBecker2018a.sh
Becker2018a/: .gitignore  Becker2018a.pc.in  CMakeLists.txt  README.md  config.h.cmake
Becker2018a/appl/: CMakeLists.txt
Becker2018a/appl/VEmod/: CMakeLists.txt  ch4.hh  h2o.hh
Becker2018a/appl/energyStorage/: CMakeLists.txt  test_dec2p.cc  test_dec2p.input  test_dec2pproblem.hh  test_dec2pspatialparams.hh
Becker2018a/dumux/: CMakeLists.txt
Becker2018a/dumux/decoupled/: CMakeLists.txt
Becker2018a/dumux/decoupled/2pve/: CMakeLists.txt  celldata2pve.hh  celldata2pvemultidim.hh  fvpressure2pve.hh  fvpressure2pvemultidim.hh  fvsaturation2pve.hh  fvsaturation2pvemultidim.hh  fvvelocity2pvemultidim.hh  gridadaptinitializationindicatorvefulld.hh  gridadaptionindicatorvefulld.hh  gridadaptve.hh  variableclassadaptiveve.hh
Becker2018a/dumux/material/: CMakeLists.txt
Becker2018a/dumux/material/fluidmatrixinteractions/2p/: CMakeLists.txt  brookscoreyLambda.hh  brookscoreyparamsLambda.hh  exponentialmaterial.hh  exponentialmaterialparams.hh
Becker2018a/test/: CMakeLists.txt
Becker2018a/test/decoupled/2pve/: CMakeLists.txt  mystart.hh  test_2pve.cc  test_2pve.input  test_2pveproblem.hh  test_2pvespatialparams.hh
Becker2018a/test/modelcoupling/: CMakeLists.txt
Becker2018a/test/modelcoupling/2pve2pfullmono/: CMakeLists.txt  test_multidim.cc  test_multidim.input  test_multidimproblem.hh  test_multidimspatialparams.hh
