
install(FILES
        celldata2pve.hh
        celldata2pvemultidim.hh
        fvpressure2pve.hh
        fvpressure2pvemultidim.hh
        fvsaturation2pve.hh
        fvsaturation2pvemultidim.hh
        fvvelocity2pvemultidim.hh
        gridadaptinitializationindicatorvefulld.hh
        gridadaptionindicatorvefulld.hh
        gridadaptve.hh
        variableclassadaptiveve.hh
        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dumux/decoupled/2pve)
